@@ -1,17 +1,19 @@
 package com.heang.drms_api.auth.model;
 
-import lombok.*;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
-@Getter
-@Setter
-@NoArgsConstructor
-@AllArgsConstructor
 @Data
+@AllArgsConstructor
+@NoArgsConstructor
+// this class create user template
 public class AppUser implements UserDetails {
     private Integer id;
     private String email;
@@ -21,7 +23,6 @@ public class AppUser implements UserDetails {
     private Boolean isVerified;
     private Boolean isActive;
 
-
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         if (roleId == 1){
@@ -29,31 +30,42 @@ public class AppUser implements UserDetails {
         } else if (roleId == 2){
             setRole("MERCHANT");
         }
-        return List.of();
+        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(role.toUpperCase());
+        return Collections.singletonList(authority);
     }
+
+//    this is for granting access based on role
 
     @Override
     public String getUsername() {
-        return "";
+        return email;
     }
 
     @Override
+    public String getPassword() {
+        return password;
+    }
+
+
+    @Override
     public boolean isAccountNonExpired() {
-        return UserDetails.super.isAccountNonExpired();
+        return true;
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return UserDetails.super.isAccountNonLocked();
+        return true;
     }
 
+    // set expire
     @Override
     public boolean isCredentialsNonExpired() {
-        return UserDetails.super.isCredentialsNonExpired();
+        return true;
     }
 
+    //Is this account enabled
     @Override
     public boolean isEnabled() {
-        return UserDetails.super.isEnabled();
+        return true;
     }
 }
